skiplang/compiler/invalid_tests/expand/macro_toplevel_fun_thisclassname.sk
// `#thisClassName` names the enclosing class, so it is out of scope in a
// top-level `macro fun` (there is no enclosing class). This must produce a
// clean "No macro in scope" error. See #1182.
macro fun name(): String {
  #thisClassName
}

fun main(): void {
  void
}
